--- a/ch4/호진.md
+++ b/ch4/호진.md
@@ -373,7 +373,7 @@ public class ReservationAgency{
 
 ReservationAgency는 모든 객체에 대해 의존하고 있기 때문에 시스템 안의 어떤 변경도 ReservationAgency의 변경을 유발한다.
 
-![ReservationAgency](Images/4-1.png)
+![ReservationAgency](https://github.com/Ohjinn/notes/blob/main/book/Object/Images/4-1.png)
 
 데이터 중심 설계와 결합도가 관련해서 가지는 치명적인 문제로 전체 시스템 전체를 하나의 거대한 의존성 덩어리로 만들어 버린다.
 
